--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
             android:layout_column="0"
             android:layout_margin="10dp"
             android:layout_row="0"
-            android:onClick="dropIn"/>
+            android:onClick="dropIn"
+            android:tag="0" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -34,7 +35,8 @@
             android:layout_column="1"
             android:layout_margin="10dp"
             android:layout_row="0"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="1" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -43,7 +45,8 @@
             android:layout_column="2"
             android:layout_margin="10dp"
             android:layout_row="0"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="2"/>
 
         <ImageView
             android:id="@+id/imageView4"
@@ -52,7 +55,8 @@
             android:layout_margin="10dp"
             android:layout_row="1"
             android:layout_column="0"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="3"/>
 
         <ImageView
             android:id="@+id/imageView5"
@@ -61,7 +65,8 @@
             android:layout_margin="10dp"
             android:layout_row="1"
             android:layout_column="1"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="4"/>
 
         <ImageView
             android:id="@+id/imageView6"
@@ -70,7 +75,8 @@
             android:layout_margin="10dp"
             android:layout_row="1"
             android:layout_column="2"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="5"/>
 
         <ImageView
             android:id="@+id/imageView7"
@@ -79,7 +85,8 @@
             android:layout_margin="10dp"
             android:layout_row="2"
             android:layout_column="0"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="6"/>
 
         <ImageView
             android:id="@+id/imageView8"
@@ -88,7 +95,8 @@
             android:layout_margin="10dp"
             android:layout_row="2"
             android:layout_column="1"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="7"/>
 
         <ImageView
             android:id="@+id/imageView9"
@@ -97,8 +105,37 @@
             android:layout_column="2"
             android:layout_margin="10dp"
             android:layout_row="2"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="8"/>
 
     </GridLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="16dp"
+        android:background="#fef200"
+        android:orientation="vertical"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/winner"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name"
+            android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/playAgainButton"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Play Again"
+            android:onClick="playAgain"/>
+    </LinearLayout>
 
 </RelativeLayout>
