--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,93 +20,108 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="0"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
             android:layout_row="0"
             android:onClick="dropIn"
             android:tag="0" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="1"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="23dp"
+            android:layout_marginTop="10dp"
             android:layout_row="0"
             android:onClick="dropIn"
             android:tag="1" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="2"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_row="0"
             android:onClick="dropIn"
-            android:tag="2"/>
+            android:tag="2" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_row="1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="0"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="35dp"
+            android:layout_row="1"
             android:onClick="dropIn"
-            android:tag="3"/>
+            android:tag="3" />
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_row="1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="1"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="23dp"
+            android:layout_marginTop="35dp"
+            android:layout_row="1"
             android:onClick="dropIn"
-            android:tag="4"/>
+            android:tag="4" />
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_row="1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="2"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="35dp"
+            android:layout_row="1"
             android:onClick="dropIn"
-            android:tag="5"/>
+            android:tag="5" />
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_row="2"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="0"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_row="2"
             android:onClick="dropIn"
-            android:tag="6"/>
+            android:tag="6" />
 
         <ImageView
             android:id="@+id/imageView8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_row="2"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="1"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_row="2"
             android:onClick="dropIn"
-            android:tag="7"/>
+            android:tag="7" />
 
         <ImageView
             android:id="@+id/imageView9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_column="2"
             android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
             android:layout_row="2"
             android:onClick="dropIn"
-            android:tag="8"/>
+            android:tag="8" />
 
     </GridLayout>
 
